--- a/alcine_backend/alcine-rest/pom.xml
+++ b/alcine_backend/alcine-rest/pom.xml
@@ -25,6 +25,11 @@
 			<artifactId>json</artifactId>
 			<version>20141113</version>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.3-1100-jdbc41</version>
+		</dependency>
     </dependencies>
 
     <properties>
