JSONObject (org.json) to JsonObject (google.gson) to avoid serialize problems

--- a/alcine_backend/alcine-rest/pom.xml
+++ b/alcine_backend/alcine-rest/pom.xml
@@ -47,6 +47,10 @@
 		    <artifactId>unirest-java</artifactId>
 		    <version>1.4.5</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    </dependency>
     </dependencies>
 
     <properties>
