--- a/alcine_backend/alcine-rest/pom.xml
+++ b/alcine_backend/alcine-rest/pom.xml
@@ -50,7 +50,11 @@
 		<dependency>
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
-		    </dependency>
+	    </dependency>
+	    <dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		</dependency>
     </dependencies>
 
     <properties>
